# ookla_speed_test_from_s3

./: .env  .gitignore  Dockerfile.airflow  Dockerfile.spark  README.md  docker-compose-airflow.yaml  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.sh
airflow/: Dockerfile.airflow  README.md  requirements.txt  values.yaml
airflow/dags/: etl.py  example.py
conf/: airflow.cfg  core-site.xml  spark-defaults.conf
config/: airflow.cfg
dags/: etl.py  utils.py
k8s/: spark-ingest-job.yaml
k8s_rbac/: airflow-rbac.yaml  spark-application.yaml  spark-rbac.yaml
notebooks/: eda.ipynb
spark/: Dockerfile.spark  spark-transform-job.yaml
spark/jobs/: README.md  cleaning.py  ingest.py
utils/: config.yaml  helpers.py  raw_data_ingestion.py  spark_transform.py  write_delta_table.py
